--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ vendors:
       base-url: https://www.murata.com
       mpn-search-path: /webapi/PsdispRest
       cross-ref-url: /webapi/SearchCrossReference
-      parametric-search-url: /webapi/GetSearchCondition
+      parametric-search-url: /webapi/PsdispRest
       default-cate: luCeramicCapacitorsSMD
       cross-ref-default-cate: cgInductorscrossreference
       categories:                                           # prefix → “cate” code
