--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,22 @@
+spring:
+  config:
+    import:
+      - optional:dotenv:.env
+openai:
+  api:
+    key: ${OPENAI_API_KEY}
+    base-url: https://api.openai.com/v1
+    default-model: ${OPENAI_MODEL:gpt-4}
+
+resilience4j:
+  retry:
+    instances:
+      openaiApi:
+        max-attempts: 3        # try up to 3 times
+        wait-duration: 500ms   # 0.5s between attempts
+        retry-exceptions:
+          - org.springframework.web.client.HttpClientErrorException
+          - org.springframework.web.client.ResourceAccessException
 vendors:
   configs:
     murata:
