Search by parameters caption to parameter value link build re-factoring

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   config:
     import:
       - optional:dotenv:.env
+      - optional:classpath:parametric-filters.yml
+
 openai:
   api:
     key: ${OPENAI_API_KEY}
