Murata parametric search with details text parameter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     import:
       - optional:dotenv:.env
       - optional:classpath:parametric-filters.yml
+      - optional:classpath:murata-categories.yml
 
 openai:
   api:
