--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.4.5'
-    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.5'
     implementation 'org.apache.commons:commons-compress:1.27.1'
     implementation 'org.apache.commons:commons-lang3:3.17.0'
@@ -31,6 +31,9 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.4.5'
+
+    implementation 'io.projectreactor.netty:reactor-netty-http:1.2.5'
+    implementation 'io.projectreactor.netty:reactor-netty-core:1.2.5'
 
     // if you’re using Spring-Boot + Resilience4j you’ll typically have:
     implementation "io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}"
